--- a/tests/cassettes/test_referral_customer_create.yaml
+++ b/tests/cassettes/test_referral_customer_create.yaml
@@ -1,6 +1,7 @@
 interactions:
 - request:
-    body: '{"user": {"name": "test test", "email": "test@test.com", "phone": "8888888888"}}'
+    body: '{"user": {"name": "Test Referral", "email": "test@example.com", "phone":
+      "5555555555"}}'
     headers:
       Accept:
       - '*/*'
@@ -9,7 +10,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '80'
+      - '87'
       Content-Type:
       - application/json
       authorization:
@@ -20,22 +21,22 @@ interactions:
     uri: https://api.easypost.com/v2/referral_customers
   response:
     body:
-      string: '{"id": "user_55b92a4a1633479488889ec5b1a2dac9", "object": "User", "parent_id":
-        null, "name": "test test", "phone_number": "<REDACTED>", "verified": true,
-        "created_at": "2025-03-06T19:48:39Z", "default_carbon_offset": false, "has_elevate_access":
+      string: '{"id": "user_0857ace4c8cc4c1c820c0020f63b58e3", "object": "User", "parent_id":
+        null, "name": "Test Referral", "phone_number": "<REDACTED>", "verified": true,
+        "created_at": "2025-11-14T21:41:14Z", "default_carbon_offset": false, "has_elevate_access":
         false, "balance": "0.00000", "price_per_shipment": "0.00000", "recharge_amount":
         null, "secondary_recharge_amount": null, "recharge_threshold": null, "has_billing_method":
         null, "cc_fee_rate": "0.0375", "default_insurance_amount": "50.00", "insurance_fee_rate":
         "0.01", "insurance_fee_minimum": "0.50", "email": "<REDACTED>", "children":
         [], "api_keys": [{"object": "ApiKey", "key": "<REDACTED>", "mode": "test",
-        "created_at": "2025-03-06T19:48:40Z", "active": true, "id": "ak_f490ecb3c0084330a8c518de543100bb"},
+        "created_at": "2025-11-14T21:41:15Z", "active": true, "id": "ak_942665c2509a4d67af5d117a22ebbe2f"},
         {"object": "ApiKey", "key": "<REDACTED>", "mode": "production", "created_at":
-        "2025-03-06T19:48:40Z", "active": true, "id": "ak_6fc88d2d69464d0da46ed6d16cf65294"}]}'
+        "2025-11-14T21:41:15Z", "active": true, "id": "ak_6e11f073d4b74271b69ff9de29131033"}]}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '1017'
+      - '1021'
       content-type:
       - application/json; charset=utf-8
       expires:
@@ -55,7 +56,7 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 8e8eb62b67c9fc17e2b97b720018a5bb
+      - 7265c2fb6917a1fae786c164010a6c1a
       x-frame-options:
       - SAMEORIGIN
       x-node:
@@ -63,12 +64,12 @@ interactions:
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb4nuq 51d74985a2
-      - extlb1nuq 99aac35317
+      - intlb3nuq c0061e0a2e
+      - extlb1nuq cbbd141214
       x-runtime:
-      - '0.598904'
+      - '0.677840'
       x-version-label:
-      - easypost-202503061913-8f39069a2d-master
+      - easypost-202511141214-a539f53042-master
       x-xss-protection:
       - 1; mode=block
     status:
