--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,59 +1,59 @@
-name: 'CI'
+name: "CI"
 
 on:
-  push:
-    branches: [master]
-  pull_request:
-  workflow_dispatch: ~
+    push:
+        branches: [master]
+    pull_request:
+    workflow_dispatch: ~
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.13'
-      - name: Install Dependencies
-        run: make install
-      - name: Lint
-        run: make lint
-  run-tests:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        pythonversion: ['3.9', '3.10', '3.11', '3.12', '3.13']
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.pythonversion }}
-      - name: Install Dependencies
-        run: make install
-      - name: Run Tests
-        run: EASYPOST_TEST_API_KEY=123 EASYPOST_PROD_API_KEY=123 make coverage
-      - name: Coveralls
+    lint:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v5
+            - uses: actions/setup-python@v6
+              with:
+                  python-version: "3.14"
+            - name: Install Dependencies
+              run: make install
+            - name: Lint
+              run: make lint
+    run-tests:
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                pythonversion: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
+        steps:
+            - uses: actions/checkout@v5
+            - uses: actions/setup-python@v6
+              with:
+                  python-version: ${{ matrix.pythonversion }}
+            - name: Install Dependencies
+              run: make install
+            - name: Run Tests
+              run: EASYPOST_TEST_API_KEY=123 EASYPOST_PROD_API_KEY=123 make coverage
+            - name: Coveralls
+              if: github.ref == 'refs/heads/master'
+              uses: coverallsapp/github-action@master
+              with:
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
+                  path-to-lcov: "./coverage.lcov"
+            - name: Run security analysis
+              run: make scan
+    docs:
         if: github.ref == 'refs/heads/master'
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: './coverage.lcov'
-      - name: Run security analysis
-        run: make scan
-  docs:
-    if: github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.13'
-      - name: Install Dependencies
-        run: make install
-      - name: Generate Docs
-        run: make docs
-      - name: Deploy Docs
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v5
+            - uses: actions/setup-python@v6
+              with:
+                  python-version: "3.14"
+            - name: Install Dependencies
+              run: make install
+            - name: Generate Docs
+              run: make docs
+            - name: Deploy Docs
+              uses: peaceiris/actions-gh-pages@v3
+              with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  publish_dir: docs
