--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/setup-python@v6
         with:
-          python-version: "3.14"
+          python-version: '3.14'
       - name: Build package
         run: make install build
       - name: Publish to PyPI
@@ -22,5 +22,5 @@ jobs:
       - name: Upload assets to release
         uses: AButler/upload-release-assets@v3.0.1
         with:
-          files: "dist/*"
+          files: 'dist/*'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
