--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,14 +10,15 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v6
+      - uses: extractions/setup-just@v3
       - uses: actions/setup-python@v6
         with:
           python-version: '3.14'
       - name: Install Dependencies
-        run: make install
+        run: just install
       - name: Lint
-        run: make lint
+        run: just lint
   run-tests:
     runs-on: ubuntu-latest
     strategy:
@@ -25,14 +26,15 @@ jobs:
         # vcrpy is not compatible with Python 3.14 yet so we cannot test against it
         pythonversion: ['3.9', '3.10', '3.11', '3.12', '3.13']
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v6
+      - uses: extractions/setup-just@v3
       - uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.pythonversion }}
       - name: Install Dependencies
-        run: make install
+        run: just install
       - name: Run Tests
-        run: EASYPOST_TEST_API_KEY=123 EASYPOST_PROD_API_KEY=123 make coverage
+        run: EASYPOST_TEST_API_KEY=123 EASYPOST_PROD_API_KEY=123 just coverage
       - name: Coveralls
         if: github.ref == 'refs/heads/master'
         uses: coverallsapp/github-action@master
@@ -40,19 +42,20 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: './coverage.lcov'
       - name: Run security analysis
-        run: make scan
+        run: just scan
   docs:
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v6
+      - uses: extractions/setup-just@v3
       - uses: actions/setup-python@v6
         with:
           python-version: '3.14'
       - name: Install Dependencies
-        run: make install
+        run: just install
       - name: Generate Docs
-        run: make docs
+        run: just docs
       - name: Deploy Docs
         uses: peaceiris/actions-gh-pages@v3
         with:
